language/move-lang/tests/move_check/locals/use_before_assign_simple.exp
error: 

   ┌── tests/move_check/locals/use_before_assign_simple.move:6:17 ───
   │
 6 │         let _ = move x + 1;
   │                 ^^^^^^ Invalid usage of local 'x'
   ·
 5 │         let x: u64;
   │             - The local does not have a value due to this position. The local must be assigned a value before being used
   │

error: 

   ┌── tests/move_check/locals/use_before_assign_simple.move:9:19 ───
   │
 9 │         let _s2 = s;
   │                   ^ Invalid usage of local 's'
   ·
 8 │         let s: S;
   │             - The local does not have a value due to this position. The local must be assigned a value before being used
   │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:14:17 ───
    │
 14 │         let _ = x + 1;
    │                 ^ Invalid usage of local 'x'
    ·
 13 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:17:19 ───
    │
 17 │         let _s3 = copy s;
    │                   ^^^^^^ Invalid usage of local 's'
    ·
 16 │         let s: S;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:22:17 ───
    │
 22 │         let _ = &x;
    │                 ^^ Invalid usage of local 'x'
    ·
 21 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:25:19 ───
    │
 25 │         let _s2 = &s;
    │                   ^^ Invalid usage of local 's'
    ·
 24 │         let s: S;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
    │

